--- a/classrules.html
+++ b/classrules.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 	<style>
@@ -12,3 +13,5 @@
 		<tr><td>Laptops</td><td>$300</td><td>$100</td><td class="profit">$200</td></tr>
 		<tr><td>Stationary</td><td>$150</td><td>$150</td><td class="zero">$0</td></tr>
 		<tr><td>Chairs</td><td>$50</td><td>$300</td><td class="loss">$250</td></tr>	
+	</body>
+</html>
